# dune-simple-faction-chooser

./: preferences.csv  pyproject.toml
src/: assign-factions.py
