[tool.poetry]
name = "dune-simple-faction-chooser"
version = "0.0.1"
description = "Try to make fair faction assignments for a game of Dune"
authors = ["Chisel <chisel@malik-wright.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
pandas-stubs = "^2.2.2.240603"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
